--- a/27_modules/1.html
+++ b/27_modules/1.html
@@ -6,7 +6,7 @@
 <p id="demo"></p>
 
 <script type="module">
-import { name, age } from "./person.js";
+import { name, age } from "person.js";
 
 let text = "My name is " + name + ", I am " + age + ".";
 
